--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 Number Maze Game
 ----------------
 
+Guide your space craft through myriad of asteroids and reach the home planet as fast as you can before it runs out of gas. As you fly through, your half broken craft emits hazardous gases. Make sure you dont pass through those and fly wisely. Game play progress through various levels with more tighter play time.
+
 There is 3 x 4 grid of numbers from 1 to 12 with a starting point A near 1 and and ending point B near 12. The user draws a line starting from A and goes through all the twelve numbers as instructed by the game and finally reaches point B. The challenge is that while drawing lines crossing numbers on the way, the line should not intersect with already drawn line, in which case the game gets over.
 To state in other way, the player needs to draw a line without intersecting with itself, touching all the points as instructed by the game and reach the end point.
 
